Revert the vertical alignment fixes in favor of the ones already included in Brackets.

--- a/styles/ewf-brackets.css
+++ b/styles/ewf-brackets.css
@@ -24,13 +24,8 @@
 .edge-web-fonts-browse-dialog .modal-header .close,
 .edge-web-fonts-include-dialog .modal-header .close,
 .edge-web-fonts-howto-dialog .modal-header .close {
-    line-height: 50px;
-}
-
-.edge-web-fonts-browse-dialog .modal-header h1.dialog-title,
-.edge-web-fonts-include-dialog .modal-header h1.dialog-title,
-.edge-web-fonts-howto-dialog .modal-header h1.dialog-title {
-    margin: 5px 0;
+    margin-top: 0px;
+    line-height: 40px;
 }
 
 .edge-web-fonts-browse-dialog .modal-body,
